[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gemwrap"
version = "0.1.0"
description = "Personal Gemini API wrapper with multi-account rotation"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.scripts]
gemwrap = "gemwrap.cli:main"

[tool.setuptools.packages.find]
include = ["gemwrap*"]
